--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="public/sushi.png" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sushi ThreeJs</title>
+    <title>Sushiman AOS</title>
   </head>
   <body>
     <header>
@@ -300,7 +299,7 @@
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Aorjiru</p>
+              <p>Aojiru</p>
             </li>
             <li>
               <div class="trending__icon flex-center">
